--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   height: 100vh;
-  background-color: #fdfcf6;
-  font-family: "Nunito", sans-serif;
+  background-color: #f9f9f4;
+  font-family: "poppins", sans-serif;
 }
 
 /* 
